--- a/css/style.css
+++ b/css/style.css
@@ -7,29 +7,45 @@
 
 /*------------------------------------------*/
 #header{
-    background-image: url();
+    border:px solid green;
+    width:100%;
+    height:100vh;
+    background-image: url(../images/orangeBackground.png);
+    background-size:80% 100%;
+    background-repeat: no-repeat;
+}
+.transparentALetter{
+    border:1px solid black;
+    width:100%;
+    height:100%;
+    background-image:url(../images/aLetter.png);
+    background-size:auto 100%;
+    background-repeat: no-repeat;
+    background-position:50% 10%;
 }
 /*------------------------------------------*/
 #navBar{
-    border:1px solid red;
+    border:px solid red;
     display:flex;
     justify-content:space-between;
     padding:0% 4%;
+    margin-top:1%;
 }
 
 #navBar .logo{
-    border:1px solid red;
+    border:px solid red;
     display:flex;
     align-items: center;
 }
 
 #navBar .logo h1{
-    border:1px solid green;
+    border:px solid green;
     font-size:3.3vw;
+    color:#fff;
 }
 
 .navLinks{
-    border:1px solid green;
+    border:px solid green;
     display:flex;
     align-items: center;
 }
@@ -40,25 +56,130 @@
 }
 
 .navLinks ul li{
-    border:1px solid orange;
+    border:px solid orange;
     padding:10px;
 }
 
 .navLinks ul li a{
     text-decoration: none;
     font-size:13px;
+    color:#fff;
 }
 
 .tryForFreeButtonDiv{
-    border:1px solid green;
+    border:px solid green;
     display: flex;
     align-items:center;
 }
 
 .tryForFreeButton{
-    border:1px solid orchid;
+    border:none;
     width:100px;
-    font-size:16px;
-    height:25px;
+    font-size:14px;
+    height:30px;
     border-radius:15px;
+    background-color:#d54800;
+    color:#fff;
+    cursor: pointer;
+}
+/*--------------------------------------------------*/
+.headerContent{
+    border:px solid black;
+    padding:0vh 7%;
+    margin-top:15vh;
+    margin-right:0px;
+}
+
+.headerText{
+    border:px solid green;
+    color:#fff;
+}
+
+.headerText p{
+    font-size:10px;
+}
+
+.headerText h1{
+    font-size:50px;
+    font-weight:700;
+    margin-top:20px;
+}
+
+.headerText h2{
+    font-size:16px;
+    
+}
+
+.headerText h3{
+    font-size:24px;
+}
+
+.buttons{
+    border:px solid black;
+    margin-top:50px;
+}
+
+.tryForFreeButton2{
+    border:1px solid #fff;
+    padding:5px 10px;
+    border-radius:25px;
+    background-color:transparent;
+    color:#fff;
+    margin-right:15px;
+}
+
+.seePlansOffersButton{
+    border:1px solid #fff;
+    padding:5px 10px;
+    border-radius:25px;
+    color:#fb644b;
+    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.2);
+}
+
+.headerImages{
+    border:px solid green;
+    position: relative;
+    
+}
+
+.headerImages .img1{
+    border:3px solid #fe5858;
+    position: absolute;
+    top:-5%;
+    right:3%;
+    width:300px;
+    border-radius:10px;
+    background-color:#fff;
+    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.3);
+}
+.headerImages .img2{
+    border:3px solid #fe5858;
+    position: absolute;
+    top:89%;
+    left:18%;
+    width:250px;
+    border-radius:10px;
+    background-color:#fff;
+    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.3);
+}
+
+.whiteBox{
+    border:2px solid #fff;
+    width:100px;
+    height: 230px;
+    position: absolute;
+    right:7%;
+    top:6%;
+    width:300px;
+}
+
+.redBox{
+    border:2px solid #fe5858;
+    position: absolute;
+    width:250px;
+    height: ;
+    right:7%;
+    bottom:-45%;
+    height:200px;
+    
 }
