--- a/css/style.css
+++ b/css/style.css
@@ -1,210 +1,325 @@
-*{
-    margin:0px;
-    padding:0px;
+* {
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
 
 /*------------------------------------------*/
-#header{
-    border:px solid green;
-    width:100%;
-    height:100vh;
+#header {
+    border: px solid green;
+    width: 100%;
+    height: 100vh;
     background-image: url(../images/orangeBackground.png);
-    background-size:80% 100%;
+    background-size: 80% 100%;
     background-repeat: no-repeat;
 }
-.transparentALetter{
-    border:1px solid black;
-    width:100%;
-    height:100%;
-    background-image:url(../images/aLetter.png);
-    background-size:auto 100%;
+
+.transparentALetter {
+    border: px solid black;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/aLetter.png);
+    background-size: auto 100%;
     background-repeat: no-repeat;
-    background-position:50% 10%;
+    background-position: 50% 10%;
 }
+
 /*------------------------------------------*/
-#navBar{
-    border:px solid red;
-    display:flex;
-    justify-content:space-between;
-    padding:0% 4%;
-    margin-top:1%;
-}
-
-#navBar .logo{
-    border:px solid red;
-    display:flex;
-    align-items: center;
-}
-
-#navBar .logo h1{
-    border:px solid green;
-    font-size:2.5vw;
-    color:#fff;
-}
-
-
-.navLinks{
-    border:px solid green;
-    display:flex;
-    align-items: center;
-}
-
-.navLinks ul{
-    display:flex;
-    list-style:none;
-}
-
-.navLinks ul li{
-    border:px solid orange;
-    padding:10px;
-}
-
-.navLinks ul li a{
-    text-decoration: none;
-    font-size:13px;
-    color:#fff;
-}
-
-.tryForFreeButtonDiv{
-    border:px solid green;
+#navBar {
+    border: px solid red;
     display: flex;
-    align-items:center;
+    justify-content: space-between;
+    padding: 0% 4%;
 }
 
-.tryForFreeButton{
-    border:none;
-    width:100px;
-    font-size:14px;
-    height:30px;
-    border-radius:15px;
-    background-color:#d54800;
-    color:#fff;
+#navBar .logo {
+    border: px solid red;
+    display: flex;
+    align-items: center;
+}
+
+#navBar .logo h1 {
+    border: px solid green;
+    font-size: 2.5vw;
+    color: #fff;
+}
+
+
+.navLinks {
+    border: px solid green;
+    display: flex;
+    align-items: center;
+}
+
+.navLinks ul {
+    display: flex;
+    list-style: none;
+}
+
+.navLinks ul li {
+    border: px solid orange;
+    padding: 10px;
+}
+
+.navLinks ul li a {
+    text-decoration: none;
+    font-size: 13px;
+    color: #fff;
+}
+
+.tryForFreeButtonDiv {
+    border: px solid green;
+    display: flex;
+    align-items: center;
+}
+
+.tryForFreeButton {
+    border: none;
+    width: 100px;
+    font-size: 14px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #d54800;
+    color: #fff;
     cursor: pointer;
 }
+
 /*--------------------------------------------------*/
-.headerContent{
-    border:px solid black;
-    padding:0vh 7%;
-    margin-top:15vh;
-    margin-right:0px;
+.headerContent {
+    border: px solid black;
+    padding: 0vh 7%;
+    margin-top: 15vh;
+    margin-right: 0px;
 }
 
-.headerText{
-    border:px solid green;
-    color:#fff;
+.headerText {
+    border: px solid green;
+    color: #fff;
 }
 
-.headerText p{
-    font-size:10px;
+.headerText p {
+    font-size: 10px;
 }
 
-.headerText h1{
-    font-size:4rem;
-    font-weight:700;
-    margin-top:20px;
+.headerText h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    margin-top: 20px;
 }
 
-@media (max-width:1100px){
-    .headerText h1{
-        font-size:calc(3vw + 1rem);
+@media (max-width:1100px) {
+    .headerText h1 {
+        font-size: calc(3vw + 1rem);
     }
 
-    #navBar .logo h1{
-        font-size:calc(2vw + 1rem); 
+    #navBar .logo h1 {
+        font-size: calc(2vw + 1rem);
     }
 }
 
-.headerText h2{
-    font-size:16px;
-    
+.headerText h2 {
+    font-size: 16px;
+
 }
 
-.headerText h3{
-    font-size:24px;
+.headerText h3 {
+    font-size: 24px;
 }
 
-.buttons{
-    border:px solid black;
-    margin-top:50px;
+.buttons {
+    border: px solid black;
+    margin-top: 50px;
 }
 
-.tryForFreeButton2{
-    border:1px solid #fff;
-    padding:5px 10px;
-    border-radius:25px;
-    background-color:transparent;
-    color:#fff;
-    margin-right:15px;
+.tryForFreeButton2 {
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 25px;
+    background-color: transparent;
+    color: #fff;
+    margin-right: 15px;
 }
 
-.seePlansOffersButton{
-    border:1px solid #fff;
-    padding:5px 10px;
-    border-radius:25px;
-    color:#fb644b;
-    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.2);
+.seePlansOffersButton {
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 25px;
+    color: #fb644b;
+    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.2);
 }
 
-.headerImages{
-    border:px solid green;
+/*-----------------------------------------------------------*/
+
+.headerImages {
+    border: px solid green;
     position: relative;
-    
+
 }
 
-.headerImages .img1{
-    border:3px solid #fe5858;
+.headerImages .img1 {
+    border: 3px solid #fe5858;
     position: absolute;
-    top:-5%;
-    right:3%;
-    width:300px;
-    border-radius:10px;
-    background-color:#fff;
-    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.3);
+    top: -5%;
+    right: 3%;
+    width: 300px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    transition:.5s;
+    transition: .5s;
 }
 
-.headerImages .img1:hover{
-    z-index:1;
-    width:310px;
+.headerImages .img1:hover {
+    z-index: 1;
+    width: 310px;
 }
 
-.headerImages .img2{
-    border:3px solid #fe5858;
+.headerImages .img2 {
+    border: 3px solid #fe5858;
     position: absolute;
-    top:89%;
-    left:18%;
-    width:250px;
-    border-radius:10px;
-    background-color:#fff;
-    box-shadow: 0px 10px 20px 1px rgba(0,0,0,0.3);
+    top: 89%;
+    left: 18%;
+    width: 250px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    transition:.5s;
+    transition: .5s;
 }
 
-.headerImages .img2:hover{
-    width:260px;
+.headerImages .img2:hover {
+    width: 260px;
 }
 
-.whiteBox{
-    border:2px solid #fff;
-    width:100px;
+.whiteBox {
+    border: 2px solid #fff;
+    width: 100px;
     height: 230px;
     position: absolute;
-    right:7%;
-    top:6%;
-    width:300px;
+    right: 7%;
+    top: 6%;
+    width: 300px;
 }
 
-.redBox{
-    border:2px solid #fe5858;
+.redBox {
+    border: 2px solid #fe5858;
     position: absolute;
-    width:250px;
+    width: 250px;
     height: ;
-    right:7%;
-    bottom:-45%;
-    height:200px;
-    
+    right: 7%;
+    bottom: -45%;
+    height: 200px;
+}
+
+/*--------------------------------------------*/
+
+.fa-arrow-right {
+    cursor: pointer;
+}
+
+.fa-arrow-right:hover {
+    color: #fe5858;
+}
+
+.compiesLogochild {
+    border: px solid red;
+    margin-bottom: 15vh;
+}
+
+.compiesLogochild .eachCompany {
+    border: px solid green;
+    display: flex;
+    justify-content: center;
+}
+
+.eachCompany img {
+    width: 80%;
+    margin: auto;
+    border: px solid green;
+    cursor: pointer;
+}
+
+/*------------------------------------------*/
+.hostingServicesChild {
+    border: px solid red;
+}
+
+.hostingServicesChild hr {
+    width: 20%;
+    border: 1.5px solid gray;
+    margin: auto;
+    margin-bottom: 3vh;
+}
+
+.hostingServicesChild h1 {
+    color: #000;
+    text-align: center;
+}
+
+.hostingServicesChild h1 span {
+    color: #fe5858;
+}
+
+.hostingServicesChild p {
+    text-align: center;
+    color: gray;
+}
+
+.mainRow {
+    border: 1px solid red;
+    margin-top: 8vh;
+    display: flex;
+    justify-content: space-around;
+}
+
+.QuickBookscol {
+    border: 1px solid green;
+    width: 22%;
+}
+
+.QuickBookscol img {
+    padding: 0px;
+}
+
+.QuickBooksTextRow {
+    display: flex;
+    justify-content: center;
+}
+
+.QuickBooksTextRow h2 {
+    color: #fe5858;
+    text-align: center;
+    margin: 2vh 0vh;
+}
+
+.QuickBooksTextRow p {
+    font-size: 16px;
+}
+
+.QuickBooksTextRow .bookNowButton {
+    border: 1px solid green;
+    margin: 5vh 0 4vh 0;
+    width: 130px;
+    height: 45px;
+    border-radius: 40px;
+    background: rgb(230, 154, 6);
+    background: linear-gradient(270deg, rgba(230, 154, 6, 1) 0%, rgba(153, 0, 0, 1) 70%);
+    color: #fff;
+}
+
+.cloudHosting {
+    border: 1px solid green;
+    width: 76%;
+}
+
+@media (max-width:950) {
+
+    .QuickBookscol {
+        width: 100%;
+    }
+
+    .cloudHosting {
+        width: 100%;
+    }
 }
